add <html> and <head> tags

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+<head></head>
 <body>
 <script>
 function updateTable() {
@@ -58,3 +60,5 @@ To get the json array, go to the NDC registry's "all NDCs" page (<a href="http:/
 <div id="output">
 </div>
 </body>
+</html>
+	
