Update NDC registry URL

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ tableMaker = o => {
 <div>This tool extracts the NDC data found in the source code of the NDC registry page and displays it in a nice table and/or offers a spreadsheet download.</div>
 <div>&nbsp;</div>
 <div id="output"></div>
-<div id="instructions">To use, go to the NDC registry's "all NDCs" page (<a href="http://www4.unfccc.int/ndcregistry/Pages/All.aspx">http://www4.unfccc.int/ndcregistry/Pages/All.aspx</a>) and get the source code (most browsers give you the source code by right clicking somewhere on the page and selecting "view sourcecode" or similar).<br>
+<div id="instructions">To use, go to the NDC registry's "all NDCs" page (<a href="https://www4.unfccc.int/sites/NDCStaging/Pages/All.aspx">https://www4.unfccc.int/sites/NDCStaging/Pages/All.aspx</a>) and get the source code (most browsers give you the source code by right clicking somewhere on the page and selecting "view sourcecode" or similar).<br>
 Copy and paste the source code into the textbox below and press any of the buttons above.
 </div>
 <hb><br>
